# datus-db-adapters

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  build_all.py  pyproject.toml
.github/workflows/: python-format-check.yml
datus-clickhouse/: README.md  docker-compose.yml  pyproject.toml
datus-clickhouse/datus_clickhouse/: __init__.py  config.py  connector.py  handlers.py  tpch_data.py
datus-clickhouse/scripts/: init_tpch_data.py
datus-clickhouse/tests/: conftest.py  test_connector.py
datus-clickhouse/tests/integration/: README.md  conftest.py  test_connection.py  test_integration.py  test_metadata_retrieval.py  test_sql_execution.py  test_tpch.py
datus-clickhouse/tests/unit/: test_config.py  test_connector_unit.py  test_migration_mixin.py
datus-clickzetta/: README.md  pyproject.toml
datus-clickzetta/datus_clickzetta/: __init__.py  config.py  connector.py
datus-clickzetta/scripts/: init_tpch_data.py
datus-clickzetta/tests/: comprehensive_test.py  conftest.py  run_tests.py
datus-db-core/: README.md  pyproject.toml
datus-greenplum/: README.md  docker-compose.yml  pyproject.toml
datus-hive/: README.md  docker-compose.yml  pyproject.toml
datus-mysql/: README.md  pyproject.toml
datus-postgresql/: README.md  pyproject.toml
datus-redshift/: README.md  pyproject.toml
datus-snowflake/: pyproject.toml
datus-spark/: README.md  docker-compose.yml  pyproject.toml
datus-sqlalchemy/: pyproject.toml
datus-starrocks/: README.md  pyproject.toml
datus-trino/: README.md  docker-compose.yml  pyproject.toml
(+134 files in other folders)
